changed style.css (added missing commas and corrected duplicated properties)

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
     <div class='prints-techniques'>
         <div class='cooperation-cart'>
             <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
-            <h2>Шелкография</p>
+            <h2>Шелкография</h2>
                 <p>Трафаретная печать подходит для нанесения почти на любых <br> изделиях: футболках, толстовках, свитшотах и т.д. Принты, <br> сделанные данным способом имеют высокую износостойкость, не <br> требуют особого ухода и прослужат довольно долго.</p>
         </div>
     <div class='cooperation-cart'>
         <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
-        <h2>Вышивка на одежде</p>
+        <h2>Вышивка на одежде</h2>
             <p>Один из самых интересных способов нанесения изображения на <br> одежду. Вышивка долговечна, без проблем переносит <br> механические воздействия. Данный вид нанесения выглядит <br> наиболее эффектно и прослужит дольше всего.
             </p>
     </div>
@@ -148,7 +148,7 @@
     </div>
     <!-- Блок со схемой работы -->
     <div class="scheme-of-work-container">
-        <p class='scheme-of-work-h2'>Схема работы с нами</h2>
+        <p class='scheme-of-work-h2'>Схема работы с нами</p>
         <p class="scheme-of-work-p">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем <br> реализовать ваши идеи.</p>
         <div class="steps">
             <div class="step">
@@ -277,7 +277,7 @@
             </div>
             </div>
         </div>
-    </div>
+<!--    </div>-->
 </main>
 </body>
 </html>
