changed index.html and style.css (removed some unnecessary br)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>            
         </div>
         <div class='header-center'>
-            <div class="header-title">Сделано <br> в Санкт-Петербурге</div>
+            <div class="header-title">Сделано в Санкт-Петербурге</div>
             <div class='header-center-btn'>
                 <a href='#' class='header-center-button'>Отправить запрос</a>
             </div>
@@ -40,7 +40,7 @@
 <main>
     <!-- Блок со вступлением и товарами -->
     <section class='intro'>
-        <h1>Современный <br>мерчендайз для бизнеса</h1>
+        <h1>Современный мерчендайз для бизнеса</h1>
         <div class='intro-text'>Над реализацией проектов по разработке и производству одеждыи аксессураов трудится огромная команда профессионалов, поэтому мы можем создавать проекты любой сложности и масштабов под ключ или воплотить конкретные задачи на любом из этапов производства.</div>
     </section>    
     <section class='products'>
@@ -89,7 +89,7 @@
     </section>
     <!-- Блок с видео-->
     <div class='video-section'>
-        <p class='video-section-p'>Презентация нашей <br>коллекции одежды 2021</p>
+        <p class='video-section-p'>Презентация нашей коллекции одежды 2021</p>
         <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video-background">
     <div class="video-overlay">
         <div class="play-button" onclick="playVideo()"></div>
@@ -98,8 +98,8 @@
     <!-- Блок о производстве -->
     <div class='cooperation-container'>
         <div class='cooperation-intro'>
-            <h2>Производство одежды <br> для компаний, брендов, <br> артистов</h2>
-            <p class='cooperation-text'>Наша команда по разработке и производству одежды может реализовать проекты любой <br> сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или <br> решить конкретные задачи на любом из этапов производства.
+            <h2>Производство одежды для компаний, брендов, артистов</h2>
+            <p class='cooperation-text'>Наша команда по разработке и производству одежды может реализовать проекты любой сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или решить конкретные задачи на любом из этапов производства.
             </p>
         </div>
         <div class='cooperations'>
@@ -123,7 +123,7 @@
     <!-- Блок со способами нанесения -->
     <div class='prints-techniques-container'>
         <div class='prints-techniques-intro'>
-            <h2>Способы нанесения <br> принтов и вышивки</h2>
+            <h2>Способы нанесения принтов и вышивки</h2>
         </div>
     <div class='prints-techniques'>
         <div class='cooperation-cart'>
@@ -142,14 +142,14 @@
     <!-- Блок о реализации -->
     <div class='realisation'>
         <div class='realisation-overlay'>
-            <p class='realisation-h2'>Если у вас есть свои товары, <br> мы можем вам помочь реализовать их.</p>
-            <p class='realisation-p'>Разместим Ваши товары на сайте vsrap.com и в офлайн-магазинах «VSRAP». <br> Осуществим обработку заказов и их отправку. Каждое предложение мы рассматриваем <br> индивидуально.</p>
+            <p class='realisation-h2'>Если у вас есть свои товары, мы можем вам помочь реализовать их.</p>
+            <p class='realisation-p'>Разместим Ваши товары на сайте vsrap.com и в офлайн-магазинах «VSRAP». Осуществим обработку заказов и их отправку. Каждое предложение мы рассматриваем индивидуально.</p>
         </div>
     </div>
     <!-- Блок со схемой работы -->
     <div class="scheme-of-work-container">
         <p class='scheme-of-work-h2'>Схема работы с нами</p>
-        <p class="scheme-of-work-p">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем <br> реализовать ваши идеи.</p>
+        <p class="scheme-of-work-p">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
         <div class="steps">
             <div class="step">
                 <img src='assets/images/send an application.png' alt='Отправляете заявку' class="step-icon">
@@ -172,11 +172,8 @@
     <!-- Блок о производстве -->
     <div class='actual-manufacturing-container'>
         <div class='actual-manufacturing-intro'>
-            <h2>Все вещи мы шьём на собственном <br> 
-                производстве в Санкт-Петербурге <br> 
-                по собственному дизайну и крою</h2>
-                <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём <br>
-                в онлайн и через собственные розничные магазины в Питере и Москве.</p>
+            <h2>Все вещи мы шьём на собственном производстве в Санкт-Петербурге по собственному дизайну и крою</h2>
+                <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём в онлайн и через собственные розничные магазины в Питере и Москве.</p>
         </div>
     <div class='actual-manufacturing'>
         <div class='actual-manufacturing-cart'>
@@ -202,8 +199,8 @@
     <!-- Блок с адресами магазинов -->
     <div class="shops-container">
         <header class="shops-header">
-            <h2>Магазины <br> в самом в центре Питера <br> и Москвы</h2>
-            <p>Мы можем организовать реализацию вашего товара, не только в онлайне, <br> но и в наших розничных магазинах.</p>
+            <h2>Магазины в самом центре Питера и Москвы</h2>
+            <p>Мы можем организовать реализацию вашего товара, не только в онлайне, но и в наших розничных магазинах.</p>
         </header>
         <div class="shops-content">
             <div class="shop-spb">
