--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p class='video-section-p'>Презентация нашей коллекции одежды 2021</p>
         <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video-background">
     <div class="video-overlay">
-        <div class="play-button" onclick="playVideo()"></div>
+        <button type="button" class="play-button"></button>
     </div>
     </div>
     <!-- Блок о производстве -->
