changed index.html and style.css (fixed error of block splitting into parts in header)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Магазин одежды</title>
 </head>
 <body>
+
 <header class='header'>
         <div class='header-line'>
             <div class='phone'>
@@ -27,13 +28,12 @@
                 <div class='email-text'>Наша почта</div>
             </div>            
         </div>
-        <div class='header-center'>
-            <div class="header-title">Сделано в Санкт-Петербурге</div>
-            <div class='header-center-btn'>
-                <a href='#' class='header-center-button'>Отправить запрос</a>
-            </div>
-        </div>
 </header>
+
+<section class='header-center'>
+    <div class="header-title">Сделано в Санкт-Петербурге</div>
+    <button type="button" class="header-center-button">Отправить запрос</button>
+</section>
 
 <main>
     <!-- Блок со вступлением и товарами -->
