changed index.html and style.css (button in footer changed to button type=button)

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                     <div class='email-text'>Наша почта</div>
                 </div>
 
-                <div class='footer-center-btn'>
-                    <a href='#' class='footer-center-button'>Отправить запрос</a>
+                <div>
+                    <button type="button" class="footer-center-button">Отправить запрос</button>
                 </div>
             </div>
         </footer>
