changed index.html, style.css, step_1.svg, step_2.svg, step_3.svg, step_4.svg (images changed to .svg format)

--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
         <p class="scheme-of-work-p">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
         <div class="steps">
             <div class="step">
-                <img src='assets/images/send an application.png' alt='Отправляете заявку' class="step-icon">
+                <img class="step-icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
                 <p class="step-text">Отправляете заявку <br> или звоните +7 (911) <br> 109-97-07</p>
             </div>
             <div class="step">
-                <img src='assets/images/developing patterns.png' alt='Разрабатываем лекала' class="step-icon">
+                <img class="step-icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
                 <p class="step-text">Разрабатываем <br> лекала и шьём <br> образец</p>
             </div>
             <div class="step">
-                <img src='assets/images/printing.png' alt='Наносим принт' class="step-icon">
+                <img class="step-icon" src="assets/images/step_3.svg" alt="Наносим принт" >
                 <p class="step-text">Шьём тираж и <br> наносим принт или <br> вышивку</p>
             </div>
             <div class="step">
-                <img src='assets/images/packing.png' alt='Упаковываем' class="step-icon">
+                <img class="step-icon" src="assets/images/step_4.svg" alt="Упаковываем" >
                 <p class="step-text">Упаковываем <br> и отгружаем <br> партию</p>
             </div>
         </div>
