changed index.html (deleted header block at the bottom)

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <button type="button" class="play-button"></button>
     </div>
     </div>
-    <!-- Блок о производстве -->
+    <!-- Блок с производством для компаний и брендов -->
     <div class='cooperation-container'>
         <div class='cooperation-intro'>
             <h2>Производство одежды для компаний, брендов, артистов</h2>
@@ -196,10 +196,10 @@
 </div>
     <!-- Блок с адресами магазинов -->
     <div class="shops-container">
-        <header class="shops-header">
+        <div class="shops-header">
             <h2>Магазины в самом центре Питера и Москвы</h2>
             <p>Мы можем организовать реализацию вашего товара, не только в онлайне, но и в наших розничных магазинах.</p>
-        </header>
+        </div>
         <div class="shops-content">
             <div class="shop-spb">
                 <h3>Санкт-Петербург <br> Лиговский проспект 64</h3>
