changed index.html and style.css (deleted another part of br)

--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
         <div class='cooperations'>
         <div class='cooperation-cart'>
             <img src='assets/images/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
-            <h2>Разработка лекал и <br> дизайна</h2>
-            <p>Поможем создать уникальные лекала для <br> вашей одежды или адаптировать уже <br> имеющиеся. Разработаем индивидуальный <br> дизайн ваших товаров</p>
+            <h3>Разработка лекал и дизайна</h3>
+            <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
         </div>
         <div class='cooperation-cart'>
             <img src='assets/images/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
-            <h2>Пошив одежды <br> на заказ</h2>
-            <p>Пошив трикотажных изделий любой <br> сложности и в любых объемах, как по <br> вашим образцам, так и по нашим базовым <br> лекалам</p>
+            <h3>Пошив одежды на заказ</h3>
+            <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
         </div>
         <div class='cooperation-cart'>
             <img src='assets/images/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
-            <h2>Бренд одежды <br> под ключ</h2>
-            <p>Поможем разработать линейку одежды для <br> вашего бренда, от пошива до реализации.</p>
+            <h3>Бренд одежды под ключ</h3>
+            <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
         </div>
     </div>
     </div>    
@@ -124,15 +124,15 @@
             <h2>Способы нанесения принтов и вышивки</h2>
         </div>
     <div class='prints-techniques'>
-        <div class='cooperation-cart'>
+        <div class='prints-techniques-cart'>
             <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
-            <h2>Шелкография</h2>
-                <p>Трафаретная печать подходит для нанесения почти на любых <br> изделиях: футболках, толстовках, свитшотах и т.д. Принты, <br> сделанные данным способом имеют высокую износостойкость, не <br> требуют особого ухода и прослужат довольно долго.</p>
+            <h3>Шелкография</h3>
+                <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
         </div>
-    <div class='cooperation-cart'>
+    <div class='prints-techniques-cart'>
         <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
-        <h2>Вышивка на одежде</h2>
-            <p>Один из самых интересных способов нанесения изображения на <br> одежду. Вышивка долговечна, без проблем переносит <br> механические воздействия. Данный вид нанесения выглядит <br> наиболее эффектно и прослужит дольше всего.
+        <h3>Вышивка на одежде</h3>
+            <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.
             </p>
     </div>
     </div>
