changed index.html and style.css (deleted all br)

--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
         <div class="steps">
             <div class="step">
                 <img class="step-icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
-                <p class="step-text">Отправляете заявку <br> или звоните +7 (911) <br> 109-97-07</p>
+                <p class="step-text">Отправляете заявку или звоните +7 (911) 109-97-07</p>
             </div>
             <div class="step">
                 <img class="step-icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
-                <p class="step-text">Разрабатываем <br> лекала и шьём <br> образец</p>
+                <p class="step-text">Разрабатываем лекала и шьём образец</p>
             </div>
             <div class="step">
                 <img class="step-icon" src="assets/images/step_3.svg" alt="Наносим принт" >
-                <p class="step-text">Шьём тираж и <br> наносим принт или <br> вышивку</p>
+                <p class="step-text">Шьём тираж и наносим принт или вышивку</p>
             </div>
             <div class="step">
                 <img class="step-icon" src="assets/images/step_4.svg" alt="Упаковываем" >
-                <p class="step-text">Упаковываем <br> и отгружаем <br> партию</p>
+                <p class="step-text">Упаковываем и отгружаем партию</p>
             </div>
         </div>
     </div>
