changed index.html (deleted all unnecessary divs)

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <body>
 
 <header class='header'>
-        <div class='header-line'>
-            <div class='phone'>
+        <section class='header-line'>
+            <section class='phone'>
                 <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
                 <div class='phone-text'>Перезвоните мне</div>
-            </div>
+            </section>
 
-            <div class='header-logo'>
+            <section class='header-logo'>
                 <div class='logo-text'>FAMFACTORY</div>
                 <div class='logo-title'>Швейная фабрика</div>
-            </div>
+            </section>
 
-            <div class='email'>
+            <section class='email'>
                 <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
                 <div class='email-text'>Наша почта</div>
-            </div>            
-        </div>
+            </section>
+        </section>
 </header>
 
 <section class='header-center'>
@@ -42,183 +42,183 @@
         <div class='intro-text'>Над реализацией проектов по разработке и производству одеждыи аксессураов трудится огромная команда профессионалов, поэтому мы можем создавать проекты любой сложности и масштабов под ключ или воплотить конкретные задачи на любом из этапов производства.</div>
     </section>    
     <section class='products'>
-        <div class='product-cart'>
+        <section class='product-cart'>
             <img src='assets/images/hudi.png' alt='Худи'>
             <div class="text-container">
                 <span class="title">Худи</span>
                 <span class="price">от 1650 ₽</span>
             </div>
-        </div>
-        <div class='product-cart'>
+        </section>
+        <section class='product-cart'>
             <img src='assets/images/futbolki.png' alt='Футболки'>
             <div class="text-container">
                 <span class="title">Футболки</span>
                 <span class="price">от 510 ₽</span>
             </div>
-        </div>
-        <div class='product-cart'>
+        </section>
+        <section class='product-cart'>
             <img src='assets/images/sweetshot.png' alt='Свитшоты'>
             <div class="text-container">
                 <span class="title">Свитшоты</span>
                 <span class="price">от 890 ₽</span>
             </div>
-        </div>
-        <div class='product-cart'>
+        </section>
+        <section class='product-cart'>
             <img src='assets/images/shtany.png' alt='Штаны'>
             <div class="text-container">
                 <span class="title">Штаны</span>
                 <span class="price">от 1230 ₽</span>
             </div>
-        </div>
-        <div class='product-cart'>
+        </section>
+        <section class='product-cart'>
             <img src='assets/images/shopery.png' alt='Шопперы'>
             <div class="text-container">
                 <span class="title">Шопперы</span>
                 <span class="price">от 330 ₽</span>
             </div>
-        </div>
-        <div class='product-cart'>
+        </section>
+        <section class='product-cart'>
             <img src='assets/images/kepki.png' alt='Кепки'>
             <div class="text-container">
                 <span class="title">Кепки</span>
                 <span class="price">от 400 ₽</span>
             </div>
-        </div>
+        </section>
     </section>
     <!-- Блок с видео-->
-    <div class='video-section'>
+    <section class='video-section'>
         <p class='video-section-p'>Презентация нашей коллекции одежды 2021</p>
         <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video-background">
-    <div class="video-overlay">
+
+        <section class="video-overlay">
         <button type="button" class="play-button"></button>
-    </div>
-    </div>
+        </section>
+    </section>
     <!-- Блок с производством для компаний и брендов -->
-    <div class='cooperation-container'>
-        <div class='cooperation-intro'>
+    <section class='cooperation-container'>
+        <section class='cooperation-intro'>
             <h2>Производство одежды для компаний, брендов, артистов</h2>
             <p class='cooperation-text'>Наша команда по разработке и производству одежды может реализовать проекты любой сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или решить конкретные задачи на любом из этапов производства.
             </p>
-        </div>
-        <div class='cooperations'>
-        <div class='cooperation-cart'>
-            <img src='assets/images/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
-            <h3>Разработка лекал и дизайна</h3>
-            <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
-        </div>
-        <div class='cooperation-cart'>
-            <img src='assets/images/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
-            <h3>Пошив одежды на заказ</h3>
-            <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
-        </div>
-        <div class='cooperation-cart'>
-            <img src='assets/images/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
-            <h3>Бренд одежды под ключ</h3>
-            <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
-        </div>
-    </div>
-    </div>    
+        </section>
+        <section class='cooperations'>
+            <section class='cooperation-cart'>
+                <img src='assets/images/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
+                <h3>Разработка лекал и дизайна</h3>
+                <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
+            </section>
+            <section class='cooperation-cart'>
+                <img src='assets/images/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
+                <h3>Пошив одежды на заказ</h3>
+                <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
+            </section>
+            <section class='cooperation-cart'>
+                <img src='assets/images/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
+                <h3>Бренд одежды под ключ</h3>
+                <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
+            </section>
+        </section>
+    </section>
     <!-- Блок со способами нанесения -->
-    <div class='prints-techniques-container'>
-        <div class='prints-techniques-intro'>
+    <section class='prints-techniques-container'>
+        <section class='prints-techniques-intro'>
             <h2>Способы нанесения принтов и вышивки</h2>
-        </div>
-    <div class='prints-techniques'>
-        <div class='prints-techniques-cart'>
-            <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
-            <h3>Шелкография</h3>
+        </section>
+        <section class='prints-techniques'>
+            <section class='prints-techniques-cart'>
+                <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
+                <h3>Шелкография</h3>
                 <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
-        </div>
-    <div class='prints-techniques-cart'>
-        <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
-        <h3>Вышивка на одежде</h3>
-            <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.
-            </p>
-    </div>
-    </div>
-</div>
+            </section>
+            <section class='prints-techniques-cart'>
+                <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
+                <h3>Вышивка на одежде</h3>
+                <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.</p>
+            </section>
+        </section>
+    </section>
     <!-- Блок о реализации -->
-    <div class='realisation'>
-        <div class='realisation-overlay'>
+    <section class='realisation'>
+        <section class='realisation-overlay'>
             <p class='realisation-h2'>Если у вас есть свои товары, мы можем вам помочь реализовать их.</p>
             <p class='realisation-p'>Разместим Ваши товары на сайте vsrap.com и в офлайн-магазинах «VSRAP». Осуществим обработку заказов и их отправку. Каждое предложение мы рассматриваем индивидуально.</p>
-        </div>
-    </div>
+        </section>
+    </section>
     <!-- Блок со схемой работы -->
-    <div class="scheme-of-work-container">
+    <section class="scheme-of-work-container">
         <p class='scheme-of-work-h2'>Схема работы с нами</p>
         <p class="scheme-of-work-p">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
-        <div class="steps">
-            <div class="step">
+        <section class="steps">
+            <section class="step">
                 <img class="step-icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
                 <p class="step-text">Отправляете заявку или звоните +7 (911) 109-97-07</p>
-            </div>
-            <div class="step">
+            </section>
+            <section class="step">
                 <img class="step-icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
                 <p class="step-text">Разрабатываем лекала и шьём образец</p>
-            </div>
-            <div class="step">
+            </section>
+            <section class="step">
                 <img class="step-icon" src="assets/images/step_3.svg" alt="Наносим принт" >
                 <p class="step-text">Шьём тираж и наносим принт или вышивку</p>
-            </div>
-            <div class="step">
+            </section>
+            <section class="step">
                 <img class="step-icon" src="assets/images/step_4.svg" alt="Упаковываем" >
                 <p class="step-text">Упаковываем и отгружаем партию</p>
-            </div>
-        </div>
-    </div>
+            </section>
+        </section>
+    </section>
     <!-- Блок о производстве -->
-    <div class='actual-manufacturing-container'>
-        <div class='actual-manufacturing-intro'>
+    <section class='actual-manufacturing-container'>
+        <section class='actual-manufacturing-intro'>
             <h2>Все вещи мы шьём на собственном производстве в Санкт-Петербурге по собственному дизайну и крою</h2>
-                <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём в онлайн и через собственные розничные магазины в Питере и Москве.</p>
-        </div>
-    <div class='actual-manufacturing'>
-        <div class='actual-manufacturing-cart'>
-        <img src='assets/images/IMG_9324.png' alt=''>
-    </div>
-    <div class='actual-manufacturing-cart'>
-        <img src='assets/images/IMG_9381.png' alt=''>
-    </div>
-    <div class='actual-manufacturing-cart'>
-        <img src='assets/images/IMG_9394.png' alt=''>
-    </div>
-    <div class='actual-manufacturing-cart'>
-        <img src='assets/images/IMG_9344.png' alt=''>
-    </div>
-    <div class='actual-manufacturing-cart'>
-        <img src='assets/images/IMG_94281.png' alt=''>
-    </div>
-    <div class='actual-manufacturing-cart'>
-        <img src='assets/images/IMG_93812.png' alt=''>
-    </div>
-    </div>
-</div>
+            <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём в онлайн и через собственные розничные магазины в Питере и Москве.</p>
+        </section>
+        <section class='actual-manufacturing'>
+            <section class='actual-manufacturing-cart'>
+                <img src='assets/images/IMG_9324.png' alt=''>
+            </section>
+            <section class='actual-manufacturing-cart'>
+                <img src='assets/images/IMG_9381.png' alt=''>
+            </section>
+            <section class='actual-manufacturing-cart'>
+                <img src='assets/images/IMG_9394.png' alt=''>
+            </section>
+            <section class='actual-manufacturing-cart'>
+                <img src='assets/images/IMG_9344.png' alt=''>
+            </section>
+            <section class='actual-manufacturing-cart'>
+                <img src='assets/images/IMG_94281.png' alt=''>
+            </section>
+            <section class='actual-manufacturing-cart'>
+                <img src='assets/images/IMG_93812.png' alt=''>
+            </section>
+        </section>
+    </section>
     <!-- Блок с адресами магазинов -->
-    <div class="shops-container">
-        <div class="shops-header">
+    <section class="shops-container">
+        <section class="shops-header">
             <h2>Магазины в самом центре Питера и Москвы</h2>
             <p>Мы можем организовать реализацию вашего товара, не только в онлайне, но и в наших розничных магазинах.</p>
-        </div>
-        <div class="shops-content">
+        </section>
+        <section class="shops-content">
             <div class="shop-spb">
                 <h3>Санкт-Петербург <br> Лиговский проспект 64</h3>
             </div>
             <div class="shop-msk">
                 <h3>Москва <br> Петровский бульвар 9</h3>
             </div>
-        </div>
-    </div>
+        </section>
+    </section>
 
     <!-- Блок с большим черным контейнером: коллаборации + футер -->
-    <div class='footer-black'>
+    <section class='footer-black'>
         <!-- Блок о коллаборациях -->
-        <div class='collaborations-container'>
-            <div class='collaborations-intro'>
+        <section class='collaborations-container'>
+            <section class='collaborations-intro'>
                 <h2>Наши коллаборации</h2>
                 <p>С нами уже самые топовые инфлюенсеры. </p>
-            </div>
-            <div class='collaborations'>
+            </section>
+            <section class='collaborations'>
                 <div class='collaborations-cart'>
                     <img src='assets/images/1416065832_6.png' alt=''>
                 </div>
@@ -246,33 +246,33 @@
                 <div class='collaborations-cart'>
                     <img src='assets/images/danick_10_1.png' alt=''>
                 </div>
-            </div>
-        </div>
+            </section>
+        </section>
 
         <!-- Блок c футером -->
         <footer>
-            <div class='footer-line'>
-                <div class='phone'>
+            <section class='footer-line'>
+                <section class='phone'>
                     <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
                     <div class='phone-text'>Перезвоните мне</div>
-                </div>
+                </section>
 
-                <div class='header-logo'>
+                <section class='header-logo'>
                     <div class='logo-text'>FAMFACTORY</div>
                     <div class='logo-title'>Швейная фабрика в Санкт-Петербурге</div>
-                </div>
+                </section>
 
-                <div class='email'>
+                <section class='email'>
                     <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
                     <div class='email-text'>Наша почта</div>
-                </div>
+                </section>
 
-                <div>
+                <section>
                     <button type="button" class="footer-center-button">Отправить запрос</button>
-                </div>
-            </div>
+                </section>
+            </section>
         </footer>
-    </div>>
+    </section>
 
 </main>
 </body>
