changed style.css and index.html (deleted absolut positioning for blocks shops-block, collaborations-block and also deleted unnecessary block footer-black)

--- a/index.html
+++ b/index.html
@@ -194,84 +194,87 @@
         </section>
     </section>
     <!-- Блок с адресами магазинов -->
-    <section class="shops-container">
-        <section class="shops-header">
+    <section class="shops-block">
+        <section class="shops-container">
             <h2>Магазины в самом центре Питера и Москвы</h2>
             <p>Мы можем организовать реализацию вашего товара, не только в онлайне, но и в наших розничных магазинах.</p>
         </section>
-        <section class="shops-content">
-            <div class="shop-spb">
-                <h3>Санкт-Петербург <br> Лиговский проспект 64</h3>
+        <section class="shops-locations">
+            <div class="shop-location">
+                <img src="assets/style/shop_spb.png" alt="Магазин в Санкт-Петербурге">
+                <p>Санкт-Петербург <br> Лиговский проспект 64</p>
             </div>
-            <div class="shop-msk">
-                <h3>Москва <br> Петровский бульвар 9</h3>
+            <div class="shop-location">
+                <img src="assets/style/shop_msk.png" alt="Магазин в Москве">
+                <p>Москва <br> Петровский бульвар 9</p>
             </div>
         </section>
     </section>
+    <!-- Блок о коллаборациях -->
+    <section class='collaborations-block'>
+        <section class='collaborations-container'>
+            <h2>Наши коллаборации</h2>
+            <p>С нами уже самые топовые инфлюенсеры. </p>
+        </section>
+        <section class='collaborations-grid'>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/1416065832_6.png' alt='Коллаборация 1'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/1416065832_5.png' alt='Коллаборация 2'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/Group_10.png' alt='Коллаборация 3'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/IMG_9232_Ed1it_2.png' alt='Коллаборация 4'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/IMG_1067_1.png' alt='Коллаборация 5'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/IMG_9170_1.png' alt='Коллаборация 6'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/football_4_1.png' alt='Коллаборация 7'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/image_17.png' alt='Коллаборация 8'>
+            </div>
+            <div class='collaborations-grid-cart'>
+                <img src='assets/images/danick_10_1.png' alt='Коллаборация 9'>
+            </div>
+        </section>
+    </section>
+
+    <!-- Блок c футером -->
+    <footer>
+        <section class='footer-line'>
+            <section class='phone'>
+                <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
+                <div class='phone-text'>Перезвоните мне</div>
+            </section>
+
+            <section class='header-logo'>
+                <div class='logo-text'>FAMFACTORY</div>
+                <div class='logo-title'>Швейная фабрика в Санкт-Петербурге</div>
+            </section>
+
+            <section class='email'>
+                <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
+                <div class='email-text'>Наша почта</div>
+            </section>
+
+            <section>
+                <button type="button" class="footer-center-button">Отправить запрос</button>
+            </section>
+        </section>
+    </footer>
 
     <!-- Блок с большим черным контейнером: коллаборации + футер -->
-    <section class='footer-black'>
-        <!-- Блок о коллаборациях -->
-        <section class='collaborations-container'>
-            <section class='collaborations-intro'>
-                <h2>Наши коллаборации</h2>
-                <p>С нами уже самые топовые инфлюенсеры. </p>
-            </section>
-            <section class='collaborations'>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/1416065832_6.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/1416065832_5.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/Group_10.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/IMG_9232_Ed1it_2.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/IMG_1067_1.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/IMG_9170_1.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/football_4_1.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/image_17.png' alt=''>
-                </div>
-                <div class='collaborations-cart'>
-                    <img src='assets/images/danick_10_1.png' alt=''>
-                </div>
-            </section>
-        </section>
+<!--    <section class='footer-black'>-->
 
-        <!-- Блок c футером -->
-        <footer>
-            <section class='footer-line'>
-                <section class='phone'>
-                    <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
-                    <div class='phone-text'>Перезвоните мне</div>
-                </section>
-
-                <section class='header-logo'>
-                    <div class='logo-text'>FAMFACTORY</div>
-                    <div class='logo-title'>Швейная фабрика в Санкт-Петербурге</div>
-                </section>
-
-                <section class='email'>
-                    <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
-                    <div class='email-text'>Наша почта</div>
-                </section>
-
-                <section>
-                    <button type="button" class="footer-center-button">Отправить запрос</button>
-                </section>
-            </section>
-        </footer>
-    </section>
+<!--    </section>-->
 
 </main>
 </body>
